manifests/services.yaml
#services.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: kubernetes-app-svc
spec:
  type: ClusterIP
  selector:
    app: kubernetes-app
  ports:
    - name: backend
      port: 2345
      protocol: TCP
      targetPort: 3000
    - name: frontend
      protocol: TCP
      port: 1234
      targetPort: 3001
