manifests/statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: postgres-project-svc
  labels:
    app: postgres
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 5432
      name: db
      protocol: TCP
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: project
  name: postgres-project-stateful
spec:
  serviceName: postgres-project-svc
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: db
          image: postgres:10-alpine
          ports:
            - name: db
              containerPort: 5432
          volumeMounts:
            # mountpoint to store pg data
            - name: data
              mountPath: /var/lib/postgresql/data/
            - name: postgres-project-seed
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: postgres-project-seed
          configMap:
            name: postgres-project-seed
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 500Mi
