manifests/ingress.yaml
#ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: project
  name: kubernetes-app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: kubernetes-app-svc
                port:
                  number: 2345
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-app-svc
                port:
                  number: 1234
